[project]
name = "test"
version = "0"
requires-python = "==3.12.*"

dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "sentry-sdk",
    "typing-extensions>=4.13.2",
]

[tool.uv.sources]
sentry-sdk = { path = "../../sentry-python", editable = true }

[tool.mypy]
mypy_path = "../../sentry-python/"
exclude = ["/Users/antonpirker/code/sentry-python/.*"]
follow_imports = "skip"
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
python_version = "3.11"
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
