[project]
name = "test"
version = "0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.11",
    "httpcore[async]>=1.0.9",
    "ipdb>=0.13.13",
    "requests>=2.32.3",
    "sentry-sdk[fastapi,asyncpg,rq]",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
sentry-sdk = { path = "../../sentry-python", editable = true }
