[project]
name = "test"
version = "0"
requires-python = ">=3.12"

dependencies = [
    "ipdb>=0.13.13",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "pudb>=2025.1",
    "sentry-sdk",
    "tiktoken>=0.10.0",
]

[tool.uv.sources]
sentry-sdk = { path = "../../sentry-python", editable = true }
