[project]
name = "test"
version = "0"
requires-python = ">=3.12"

dependencies = [
    "gandalf>=0.1.4",
    "grandalf>=0.8",
    "ipdb>=0.13.13",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.4",
    "sentry-sdk",
    "tiktoken>=0.10.0",
]

[tool.uv.sources]
sentry-sdk = { path = "../../sentry-python", editable = true }
